# opentelemetry-rust-contrib

./: .cspell.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
examples/traceresponse/: Cargo.toml
examples/traceresponse/src/: client.rs  server.rs
log_test/: Cargo.toml
log_test/src/: lib.rs  main.rs  my_secret_module.rs
opentelemetry-aws/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-aws/benches/: xray_exporter.rs
opentelemetry-aws/src/: lib.rs
opentelemetry-aws/src/detector/: lambda.rs  mod.rs
opentelemetry-aws/src/trace/: id_generator.rs  mod.rs  xray_extractor.rs  xray_propagator.rs
opentelemetry-aws/src/xray_exporter/: mod.rs  utils.rs
opentelemetry-aws/tests/: attribute_processing.rs  constraint_validation.rs  error_handling.rs  json_serialization.rs  parent_child_relationships.rs  resource_translation.rs  translation_pipeline.rs
opentelemetry-aws/tests/common/: mod.rs
opentelemetry-c/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
opentelemetry-c/abi/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-c/abi/src/: lib.rs
opentelemetry-c/api/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-c/api/benches/: api_hotpath.rs
opentelemetry-c/api/src/: error.rs  global.rs  handle.rs  lib.rs  trace.rs
opentelemetry-c/api/tests/: backed_null.rs  c_header_compile.rs  global_retain_failure.rs  (+1 more)
opentelemetry-c/sdk/: CHANGELOG.md  Cargo.toml  README.md  build.rs
opentelemetry-c/src/: common.rs  error.rs  handle.rs  lib.rs  sdk.rs  trace.rs
opentelemetry-c/tests/: c_header_compile.rs  ffi_traces.rs
opentelemetry-config/: Cargo.toml  README.md
opentelemetry-config-stdout/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-config-stdout/examples/: metrics_console_config_error.yaml
opentelemetry-config-stdout/src/: lib.rs
opentelemetry-config/examples/: metrics_console.yaml  metrics_custom.yaml
opentelemetry-config/src/: configurators.rs  lib.rs  model.rs  providers.rs
opentelemetry-contrib/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-contrib/benches/: new_span.rs
opentelemetry-contrib/src/: lib.rs
opentelemetry-datadog/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-datadog/benches/: datadog_exporter.rs
opentelemetry-datadog/examples/: agent_sampling.rs  datadog.rs
opentelemetry-datadog/src/: lib.rs
opentelemetry-derive/: Cargo.toml  README.md
opentelemetry-derive/opentelemetry-derive-impl/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-derive/src/: lib.rs
opentelemetry-etw-logs/: CHANGELOG.md  Cargo.toml  README.md  build.rs
opentelemetry-etw-logs/benches/: logs.rs
opentelemetry-etw-logs/examples/: basic.rs  exporter_options.rs
opentelemetry-etw-logs/src/: lib.rs  processor.rs
opentelemetry-etw-metrics/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-etw-metrics/benches/: etw.rs  exporter.rs
opentelemetry-etw-metrics/disabled_benches/: exporter.rs
opentelemetry-etw-metrics/examples/: advanced-metrics.rs  advanced.rs  basic-metrics-with-various-instruments.rs  basic-metrics.rs  basic.rs
opentelemetry-etw-metrics/src/: lib.rs
opentelemetry-etw-metrics/tests/: integration.rs
opentelemetry-etw-traces/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-etw-traces/examples/: basic.rs
opentelemetry-etw-traces/src/: lib.rs  processor.rs
opentelemetry-instrumentation-actix-web/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-instrumentation-actix-web/benches/: middleware.rs
opentelemetry-instrumentation-actix-web/examples/: client.rs  server.rs
opentelemetry-instrumentation-actix-web/src/: client.rs  lib.rs  util.rs
opentelemetry-instrumentation-tower/: CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md
opentelemetry-instrumentation-tower/benches/: http_client.rs  http_server.rs  middleware.rs
opentelemetry-instrumentation-tower/development/: README.md  docker-compose.yaml
opentelemetry-instrumentation-tower/examples/: .dockerignore  grpc.rs
opentelemetry-instrumentation-tower/src/: grpc.rs  lib.rs
opentelemetry-instrumentation-tower/tests/: grpc_tonic.rs
opentelemetry-journald-logs/: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs
opentelemetry-journald-logs/examples/: README.md  basic-logs.rs
opentelemetry-journald-logs/src/: lib.rs
opentelemetry-macros/: Cargo.toml
opentelemetry-macros/src/: lib.rs
opentelemetry-resource-detector/: Cargo.toml
opentelemetry-resource-detector/src/: lib.rs  os.rs  process.rs
opentelemetry-resource-detectors/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
opentelemetry-resource-detectors/src/: aws.rs  container.rs  host.rs  k8s.rs  k8stest.rs  lib.rs  os.rs  process.rs  service_instance.rs  uuid.rs
opentelemetry-stackdriver/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-stackdriver/src/: google_trace_context_propagator.rs  lib.rs
opentelemetry-stackdriver/tests/: generate.rs
opentelemetry-user-events-logs/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-user-events-logs/benches/: benchmark.rs  logs.rs
opentelemetry-user-events-logs/examples/: basic-logs.rs  custom-event-name.rs
opentelemetry-user-events-logs/src/: lib.rs
opentelemetry-user-events-metrics/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-user-events-metrics/examples/: basic-metrics.rs  basic.rs
opentelemetry-user-events-metrics/local-setup/: README.md  cloud-init.yaml
opentelemetry-user-events-metrics/src/: lib.rs
opentelemetry-user-events-trace/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-user-events-trace/benches/: traces.rs
opentelemetry-user-events-trace/examples/: basic-trace.rs
opentelemetry-user-events-trace/src/: lib.rs
opentelemetry-zpages/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-zpages/examples/: zpages.rs
opentelemetry-zpages/src/: lib.rs
stress/: Cargo.toml
stress/config/: nginx.conf
stress/src/: async_throughput.rs  etw_logs.rs  eventheader.rs  geneva_exporter.rs  throughput.rs  user_events.rs  user_events_enabled.rs
tracing_test/: Cargo.toml
tracing_test/src/: lib.rs  main.rs  my_secret_module.rs
(+357 files in other folders)
