[workspace]
members = [
    "opentelemetry-aws",
    "opentelemetry-contrib",
    "opentelemetry-datadog",
    "opentelemetry-etw-logs",
    "opentelemetry-etw-metrics",
    "opentelemetry-instrumentation-actix-web",
    "opentelemetry-resource-detectors",
    "opentelemetry-stackdriver",
    "opentelemetry-user-events-logs",
    "opentelemetry-user-events-trace",
    "opentelemetry-user-events-metrics",
    "opentelemetry-zpages",
    "opentelemetry-exporter-geneva/geneva-uploader",
    "opentelemetry-exporter-geneva/geneva-uploader-ffi",
    "opentelemetry-exporter-geneva/opentelemetry-exporter-geneva",
    "examples/*",
    "stress",
]

resolver = "2"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
# See function names in profiling reports.
# 2/true is too much, 0 is not enough, 1 is just right for back traces
debug = 1

[workspace.dependencies]
opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.29"
opentelemetry-http = "0.29"
opentelemetry-proto = { version = "0.29", default-features = false }
opentelemetry_sdk = { version = "0.29", default-features = false }
opentelemetry-stdout = "0.29"
opentelemetry-semantic-conventions = { version = "0.29", features = [
    "semconv_experimental",
] }
criterion = "0.5"

[workspace.lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
# No need to enable those, because it is either unnecessary or results in ugly syntax
if_let_rescope = "allow"
tail_expr_drop_order = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = 1 }
