[workspace]
members = [
    "opentelemetry-aws",
    "opentelemetry-contrib",
    "opentelemetry-datadog",
    "opentelemetry-etw-logs",
    "opentelemetry-etw-metrics",
    "opentelemetry-instrumentation-actix-web",
    "opentelemetry-instrumentation-tower",
    "opentelemetry-instrumentation-tower/examples/*",
    "opentelemetry-resource-detectors",
    "opentelemetry-stackdriver",
    "opentelemetry-user-events-logs",
    "opentelemetry-user-events-trace",
    "opentelemetry-user-events-metrics",
    "opentelemetry-exporter-geneva/geneva-uploader",
    "opentelemetry-exporter-geneva/geneva-uploader-ffi",
    "opentelemetry-exporter-geneva/opentelemetry-exporter-geneva",
    "examples/*",
    "stress",
]

resolver = "2"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
# See function names in profiling reports.
# 2/true is too much, 0 is not enough, 1 is just right for back traces
debug = 1

[workspace.dependencies]
opentelemetry = "0.30"
opentelemetry-appender-tracing = "0.30"
opentelemetry-http = "0.30"
opentelemetry-proto = { version = "0.30", default-features = false }
opentelemetry_sdk = { version = "0.30", default-features = false }
opentelemetry-stdout = "0.30"
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
] }
criterion = "0.7"

[workspace.lints.rust]
# Note: rust_2024_compatibility, if_let_rescope, and tail_expr_drop_order lints
# are only available in Rust 1.76+ and are incompatible with MSRV 1.75.0
# rust_2024_compatibility = { level = "warn", priority = -1 }
# if_let_rescope = "allow"
# tail_expr_drop_order = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = 1 }
