[package]
name = "log_test"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "log_test"
path = "src/main.rs"
doc = false

[dependencies]
opentelemetry-appender-log = { version = "0.29", features= ["spec_unstable_logs_enabled"] }
opentelemetry_sdk = { workspace = true, features = ["logs", "spec_unstable_logs_enabled"] }
opentelemetry-etw-logs = { path = "../opentelemetry-etw-logs"}
log = { version = "0.4.21", features = ["kv_serde"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"

[lints]
workspace = true
