[package]
name = "opentelemetry-aws"
version = "0.19.0"
description = "AWS exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-aws"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-aws"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace", "internal-logs", "xray-exporter"]
internal-logs = ["dep:tracing"]

trace = ["opentelemetry/trace", "opentelemetry_sdk/trace"]
detector-aws-lambda = ["dep:opentelemetry-semantic-conventions"]

xray-exporter = [
    "opentelemetry/trace",
    "opentelemetry_sdk/trace",
    "dep:opentelemetry-semantic-conventions",
    "dep:serde_json",
    "dep:thiserror",
    "dep:regex",
    "dep:url",
    "dep:rand"
]
xray-daemon-client = ["xray-exporter"]
xray-stdout-client = ["xray-exporter"]
subsegment-nesting = []

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true, features = [
    "semconv_experimental",
] }
tracing = {version = "0.1", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", optional = true}
thiserror = {version = "1.0", optional = true}
regex = {version = "1.0", optional = true}
url = {version = "2.0", optional = true}
rand = {version = "0.9", optional = true}

[dev-dependencies]
opentelemetry-aws = {path = ".", features = ["subsegment-nesting", "xray-daemon-client"] }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
opentelemetry-http = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["trace"] }
hyper = { version = "1.4.1" }
tokio = { version = "1.0", features = ["macros", "rt"] }
sealed_test = "1.1"
temp-env = "0.3"
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
pprof = { version = "0.14.1", features = ["flamegraph", "criterion"]}
rand = "0.9"

[[bench]]
name = "xray_exporter"
harness = false

[package.metadata.cargo-machete]
ignored = ["tracing"]

[lints]
workspace = true
