[package]
name = "opentelemetry-c"
description = "Rust-backed C API and SDK for OpenTelemetry (traces)"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-c"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-c"
rust-version = "1.75.0"
keywords = ["opentelemetry", "tracing", "ffi", "c", "otlp"]
categories = ["development-tools::debugging", "api-bindings"]
license = "Apache-2.0"

# The crate is consumed both as a normal Rust rlib (for the FFI integration tests)
# and as a C-linkable shared/static library. `cdylib`/`staticlib` are what C users
# link against; `rlib` keeps the crate usable from Rust integration tests.
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
] }
# Direct dependency used only to select the TLS backend for the OTLP blocking HTTP
# client via this crate's `native-tls` / `rustls-tls` features (see [features] below).
# The exporter is driven entirely through opentelemetry-otlp; this crate never calls
# reqwest directly.
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }

[features]
# Platform TLS is the default: it uses the OS TLS stack (OpenSSL on Linux, Secure
# Transport on macOS, SChannel on Windows), so no crypto is bundled and the rustls
# dependency tree is not pulled in. HTTPS OTLP endpoints work out of the box.
default = ["native-tls"]
# Use the platform's native TLS stack for OTLP HTTPS export.
native-tls = ["reqwest/native-tls"]
# Use rustls (pure-Rust TLS) for OTLP HTTPS export instead of the platform stack.
# This pulls in the rustls dependency tree and a bundled crypto provider.
rustls-tls = ["reqwest/rustls"]

[dev-dependencies]
# Enables the SDK's in-memory span exporter (`InMemorySpanExporter`) so tests can drive
# the real FFI entry points and inspect the exported span data (e.g. parent/child
# relationships). The `testing` feature is only active for test builds.
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }

[lints]
workspace = true
