[package]
name = "opentelemetry-contrib"
version = "0.21.0"
description = "Rust contrib repo for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-contrib"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-contrib"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
api = []
default = []
base64_format = ["base64", "binary_propagator"]
binary_propagator = []
jaeger_json_exporter = ["opentelemetry_sdk", "serde_json"]
rt-tokio = ["tokio", "opentelemetry_sdk/rt-tokio"]
rt-tokio-current-thread = ["tokio", "opentelemetry_sdk/rt-tokio-current-thread"]

[dependencies]
base64 = { version = "0.22", optional = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1.0", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[[bench]]
name = "new_span"
harness = false
required-features = ["api"]

[lints]
workspace = true
