[package]
name = "opentelemetry-datadog"
version = "0.13.0"
description = "Datadog exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-datadog"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-datadog"
readme = "README.md"
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["intern-ahash"]
agent-sampling = []
reqwest-blocking-client = ["reqwest/blocking", "opentelemetry-http/reqwest"]
reqwest-client = ["reqwest", "opentelemetry-http/reqwest"]
surf-client = ["dep:surf"]
intern-ahash = ["ahash"]
intern-std = []

[dependencies]
indexmap = "2.0"
once_cell = "1.12"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["trace"] }
opentelemetry-http = { version = "0.13" }
opentelemetry-semantic-conventions = { workspace = true }
rmp = "0.8"
url = "2.2"
reqwest = { version = "0.12", default-features = false, optional = true }
surf = { version = "2.0", default-features = false, optional = true }
thiserror = "1.0"
http = "1"
futures-core = "0.3"
ryu = "1"
itoa = "1"
ahash = { version = "0.8", optional = true }

[dev-dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "testing"] }
criterion = "0.5"
rand = "0.8"
hyper = "1"
hyper-util = { version = "0.1.6", features = ["client", "full"] }
hyperlocal = "0.9.1"
http-body-util = "0.1.2"

[[bench]]
name = "datadog_exporter"
harness = false

[[example]]
name = "datadog"
path = "examples/datadog.rs"

[[example]]
name = "agent_sampling"
path = "examples/agent_sampling.rs"
required-features = ["agent-sampling"]
