[package]
name = "opentelemetry-etw-logs"
description = "OpenTelemetry logs exporter to ETW (Event Tracing for Windows)"
version = "0.8.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-logs"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-logs"
readme = "README.md"
rust-version = "1.75.0"
keywords = ["opentelemetry", "log", "trace", "etw"]
license = "Apache-2.0"

[dependencies]
tracelogging_dynamic = "1.2.4"
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { workspace = true, features = ["logs"] }
tracing = { version = "0.1", optional = true }
serde_json = { version = "1.0.113", optional = true }
futures-executor = "0.3.31"
chrono = { version = "0.4.40", default-features = false, features = ["alloc", "std"] }

[dev-dependencies]
opentelemetry-appender-tracing = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["logs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
] }
microbench = "0.5"

[features]
spec_unstable_logs_enabled = [
    "opentelemetry/spec_unstable_logs_enabled",
    "opentelemetry_sdk/spec_unstable_logs_enabled",
]
internal-logs = [
    "tracing",
    "opentelemetry/internal-logs",
    "opentelemetry_sdk/internal-logs",
]
serde_json = ["dep:serde_json"]
default = ["internal-logs"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[lints]
workspace = true
