[package]
name = "opentelemetry-etw-traces"
version = "0.1.0"
description = "OpenTelemetry exporter for ETW (Event Tracing for Windows) traces using TraceLogging Dynamic"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-traces"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing", "etw", "windows"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[features]
default = []

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["alloc", "std"] }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
tracelogging = "1.2.4"
tracelogging_dynamic = "1.2.4"
serde_json = "1.0"

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
