[package]
name = "opentelemetry-instrumentation-actix-web"
version = "0.22.0"
description = "OpenTelemetry instrumentation for Actix Web apps"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/actix-web-opentelemetry"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/actix-web-opentelemetry"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["actix", "actix-web", "opentelemetry"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[features]
metrics = ["opentelemetry/metrics"]
sync-middleware = []

[dependencies]
actix-http = { version = "3.0", default-features = false, features = [
  "compress-zstd",
] }
actix-web = { version = "4.0", default-features = false, features = [
  "compress-zstd",
] }
awc = { version = "3.0", optional = true, default-features = false, features = [
  "compress-zstd",
] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { workspace = true, features = [
  "semconv_experimental",
] }
serde = "1.0"

[dev-dependencies]
actix-web = { version = "4.0", features = ["macros"] }
opentelemetry-instrumentation-actix-web = { path = ".", features = [
  "metrics",
  "sync-middleware",
  "awc",
] }
opentelemetry_sdk = { workspace = true, features = [
  "spec_unstable_metrics_views",
  "metrics",
  "rt-tokio-current-thread",
] }
opentelemetry-stdout = { workspace = true, features = ["trace", "metrics"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
